--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -23,13 +23,13 @@
   
   ul {
     display: flex;
-    gap: 50px;
+    
     justify-content: center;
     align-items: center;
   }
   
   a {
-    
+    margin: 0 25px;
     &:hover,
     &:focus {
       color: $quaternary;
