--- a/styles/style.css
+++ b/styles/style.css
@@ -485,13 +485,15 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 50px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.mainNav a {
+  margin: 0 25px;
 }
 .mainNav a:hover, .mainNav a:focus {
   color: #f6f6f6;
@@ -714,9 +716,9 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 40px;
 }
 .gallery ul li {
+  margin: 0 20px;
   width: 33.3333333333%;
 }
 
@@ -810,9 +812,9 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
 }
 .contactFlex .socialIcons i {
+  margin: 0 15px;
   color: #227284;
   font-size: 1.3rem;
 }
@@ -1023,7 +1025,7 @@ form button {
   }
   .homeHead .headerImgContainer {
     width: 50%;
-    min-width: 350px;
+    min-width: 300px;
   }
   .headerFlex {
     -webkit-box-orient: vertical;
@@ -1054,6 +1056,7 @@ form button {
   }
   .gallery ul li {
     width: 100%;
+    margin: 20px 0;
   }
   .gallery ul li img {
     margin: 0 auto;
@@ -1097,6 +1100,14 @@ form button {
   }
 }
 @media (max-width: 650px) {
+  .homeHead h1 {
+    font-size: 3rem;
+    margin-top: 30px;
+  }
+  .homeHead h1::after {
+    font-size: 0.7rem;
+    left: 80px;
+  }
   .mainNav ul {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1111,6 +1122,15 @@ form button {
             flex-direction: column;
   }
   .blogPageFlex .recent {
+    width: 100%;
+  }
+  form .nameEmail {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  form input {
     width: 100%;
   }
 }
